--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -9,7 +9,6 @@
 
   box-shadow: var(--box-shadow);
 
-  overflow: hidden;
   background-color: var(--bg-color);
 }
 
