--- a/styles/global.css
+++ b/styles/global.css
@@ -28,6 +28,7 @@ main {
   display: flex;
   flex-direction: column;
   flex: 1;
+  overflow-y: scroll;
 }
 
 p {
